--- a/doc/d3vk1t.ioc
+++ b/doc/d3vk1t.ioc
@@ -2,70 +2,87 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-CAN1.BS1=CAN_BS1_1TQ
-CAN1.BS2=CAN_BS2_1TQ
 CAN1.CalculateBaudRate=749999
 CAN1.CalculateTimeBit=1333
 CAN1.CalculateTimeQuantum=444.44444444444446
-CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,BS1,BS2
+CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate
 File.Version=6
-GPIO.groupedBy=
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F412RET6
 Mcu.Family=STM32F4
 Mcu.IP0=CAN1
 Mcu.IP1=I2C1
-Mcu.IP10=USART1
-Mcu.IP11=USART2
-Mcu.IP12=USART3
-Mcu.IP13=USB_OTG_FS
+Mcu.IP10=TIM2
+Mcu.IP11=TIM3
+Mcu.IP12=TIM8
+Mcu.IP13=TIM14
+Mcu.IP14=USART1
+Mcu.IP15=USART2
+Mcu.IP16=USART6
+Mcu.IP17=USB_OTG_FS
 Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SDIO
-Mcu.IP5=SPI1
-Mcu.IP6=SYS
-Mcu.IP7=TIM1
-Mcu.IP8=TIM2
-Mcu.IP9=TIM3
-Mcu.IPNb=14
+Mcu.IP3=QUADSPI
+Mcu.IP4=RCC
+Mcu.IP5=RTC
+Mcu.IP6=SDIO
+Mcu.IP7=SPI2
+Mcu.IP8=SPI4
+Mcu.IP9=SYS
+Mcu.IPNb=18
 Mcu.Name=STM32F412R(E-G)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA7
-Mcu.Pin11=PB10
-Mcu.Pin12=PB15
-Mcu.Pin13=PC6
-Mcu.Pin14=PC7
-Mcu.Pin15=PC8
-Mcu.Pin16=PC9
-Mcu.Pin17=PA8
-Mcu.Pin18=PA9
-Mcu.Pin19=PA10
+Mcu.Pin10=PA2
+Mcu.Pin11=PA3
+Mcu.Pin12=PA5
+Mcu.Pin13=PA6
+Mcu.Pin14=PA7
+Mcu.Pin15=PC4
+Mcu.Pin16=PC5
+Mcu.Pin17=PB0
+Mcu.Pin18=PB1
+Mcu.Pin19=PB2
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PA11
-Mcu.Pin21=PA12
-Mcu.Pin22=PA13
-Mcu.Pin23=PA14
-Mcu.Pin24=PA15
-Mcu.Pin25=PC10
-Mcu.Pin26=PC11
-Mcu.Pin27=PD2
-Mcu.Pin28=PB3
-Mcu.Pin29=PB5
+Mcu.Pin20=PB10
+Mcu.Pin21=PB13
+Mcu.Pin22=PB14
+Mcu.Pin23=PB15
+Mcu.Pin24=PC6
+Mcu.Pin25=PC7
+Mcu.Pin26=PC8
+Mcu.Pin27=PC9
+Mcu.Pin28=PA8
+Mcu.Pin29=PA9
 Mcu.Pin3=PH0 - OSC_IN
-Mcu.Pin30=PB6
-Mcu.Pin31=PB7
-Mcu.Pin32=PB8
-Mcu.Pin33=PB9
-Mcu.Pin34=VP_SYS_VS_Systick
+Mcu.Pin30=PA10
+Mcu.Pin31=PA11
+Mcu.Pin32=PA12
+Mcu.Pin33=PA13
+Mcu.Pin34=PA14
+Mcu.Pin35=PA15
+Mcu.Pin36=PC10
+Mcu.Pin37=PC11
+Mcu.Pin38=PC12
+Mcu.Pin39=PD2
 Mcu.Pin4=PH1 - OSC_OUT
-Mcu.Pin5=PA2
-Mcu.Pin6=PA3
-Mcu.Pin7=PA4
-Mcu.Pin8=PA5
-Mcu.Pin9=PA6
-Mcu.PinsNb=35
+Mcu.Pin40=PB3
+Mcu.Pin41=PB4
+Mcu.Pin42=PB5
+Mcu.Pin43=PB6
+Mcu.Pin44=PB7
+Mcu.Pin45=PB8
+Mcu.Pin46=PB9
+Mcu.Pin47=VP_RTC_VS_RTC_Activate
+Mcu.Pin48=VP_SYS_VS_Systick
+Mcu.Pin49=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin5=PC0
+Mcu.Pin6=PC1
+Mcu.Pin7=PC2
+Mcu.Pin8=PA0
+Mcu.Pin9=PA1
+Mcu.PinsNb=50
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F412RETx
@@ -82,6 +99,13 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA0.GPIOParameters=GPIO_Label
+PA0.GPIO_Label=USER_BTN
+PA0.Locked=true
+PA0.Signal=GPXTI0
+PA1.Mode=TX_Only_Simplex_Unidirect_Master
+PA1.Signal=SPI4_MOSI
+PA10.Locked=true
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
 PA11.Mode=Device_Only
@@ -93,30 +117,51 @@ PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Trace_Asynchronous_SW
 PA14.Signal=SYS_JTCK-SWCLK
 PA15.Locked=true
-PA15.Signal=S_TIM2_CH1_ETR
+PA15.Mode=Asynchronous
+PA15.Signal=USART1_TX
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
-PA4.Mode=NSS_Signal_Hard_Output
-PA4.Signal=SPI1_NSS
-PA5.Mode=Full_Duplex_Master
-PA5.Signal=SPI1_SCK
-PA6.Mode=Full_Duplex_Master
-PA6.Signal=SPI1_MISO
-PA7.Mode=Full_Duplex_Master
-PA7.Signal=SPI1_MOSI
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=BUZZER
+PA5.Locked=true
+PA5.Signal=S_TIM2_CH1_ETR
+PA6.Mode=Single Bank 2
+PA6.Signal=QUADSPI_BK2_IO0
+PA7.Mode=Single Bank 2
+PA7.Signal=QUADSPI_BK2_IO1
 PA8.Locked=true
-PA8.Signal=S_TIM1_CH1
+PA8.Mode=SD_4_bits_Wide_bus
+PA8.Signal=SDIO_D1
 PA9.Locked=true
-PA9.Mode=Asynchronous
-PA9.Signal=USART1_TX
-PB10.Mode=Asynchronous
-PB10.Signal=USART3_TX
-PB15.Mode=SD_4_bits_Wide_bus
-PB15.Signal=SDIO_CK
+PA9.Mode=SD_4_bits_Wide_bus
+PA9.Signal=SDIO_D2
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=RGB_RED
+PB0.Locked=true
+PB0.Signal=S_TIM3_CH3
+PB1.Mode=Single Bank 2
+PB1.Signal=QUADSPI_CLK
+PB10.Mode=Full_Duplex_Master
+PB10.Signal=SPI2_SCK
+PB13.Mode=TX_Only_Simplex_Unidirect_Master
+PB13.Signal=SPI4_SCK
+PB14.Locked=true
+PB14.Mode=Full_Duplex_Master
+PB14.Signal=SPI2_MISO
+PB15.Locked=true
+PB15.Mode=Full_Duplex_Master
+PB15.Signal=SPI2_MOSI
+PB2.GPIOParameters=GPIO_Label
+PB2.GPIO_Label=CAN_STB
+PB2.Locked=true
+PB2.Signal=GPIO_Output
 PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=SYS_JTDO-SWO
+PB4.Locked=true
+PB4.Mode=SD_4_bits_Wide_bus
+PB4.Signal=SDIO_D0
 PB5.Mode=SD_4_bits_Wide_bus
 PB5.Signal=SDIO_D3
 PB6.Mode=I2C
@@ -127,24 +172,49 @@ PB8.Mode=CAN_Activate
 PB8.Signal=CAN1_RX
 PB9.Mode=CAN_Activate
 PB9.Signal=CAN1_TX
-PC10.Mode=SD_4_bits_Wide_bus
-PC10.Signal=SDIO_D2
-PC11.Mode=Asynchronous
-PC11.Signal=USART3_RX
+PC0.GPIOParameters=GPIO_Label
+PC0.GPIO_Label=ACC_CS
+PC0.Locked=true
+PC0.Signal=GPIO_Output
+PC1.GPIOParameters=GPIO_Label
+PC1.GPIO_Label=BARO_CS
+PC1.Locked=true
+PC1.Signal=GPIO_Output
+PC10.GPIOParameters=GPIO_Label
+PC10.GPIO_Label=RS485_DE
+PC10.Locked=true
+PC10.Signal=GPIO_Output
+PC11.Mode=Single Bank 2
+PC11.Signal=QUADSPI_BK2_NCS
+PC12.Locked=true
+PC12.Mode=SD_4_bits_Wide_bus
+PC12.Signal=SDIO_CK
+PC13.GPIOParameters=GPIO_Label
+PC13.GPIO_Label=ACC_INT
 PC13.Locked=true
 PC13.Signal=GPXTI13
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
-PC6.Locked=true
-PC6.Signal=S_TIM3_CH1
-PC7.Locked=true
-PC7.Signal=S_TIM3_CH2
-PC8.Mode=SD_4_bits_Wide_bus
-PC8.Signal=SDIO_D0
-PC9.Mode=SD_4_bits_Wide_bus
-PC9.Signal=SDIO_D1
+PC2.GPIOParameters=GPIO_Label
+PC2.GPIO_Label=SD_DET
+PC2.Locked=true
+PC2.Signal=GPXTI2
+PC4.Mode=Single Bank 2
+PC4.Signal=QUADSPI_BK2_IO2
+PC5.Mode=Single Bank 2
+PC5.Signal=QUADSPI_BK2_IO3
+PC6.Mode=Asynchronous
+PC6.Signal=USART6_TX
+PC7.Mode=Asynchronous
+PC7.Signal=USART6_RX
+PC8.GPIOParameters=GPIO_Label
+PC8.GPIO_Label=RGB_BLUE
+PC8.Locked=true
+PC8.Signal=S_TIM8_CH3
+PC9.Locked=true
+PC9.Signal=S_TIM3_CH4
 PD2.Mode=SD_4_bits_Wide_bus
 PD2.Signal=SDIO_CMD
 PH0\ -\ OSC_IN.Mode=HSE-External-Oscillator
@@ -180,7 +250,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=EWARM V8.50
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CAN1_Init-CAN1-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_SDIO_SD_Init-SDIO-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_USART2_UART_Init-USART2-false-HAL-true,9-MX_USART3_UART_Init-USART3-false-HAL-true,10-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,11-MX_SPI2_Init-SPI2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CAN1_Init-CAN1-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_SDIO_SD_Init-SDIO-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true,8-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,9-MX_TIM2_Init-TIM2-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true,11-MX_QUADSPI_Init-QUADSPI-false-HAL-true,12-MX_RTC_Init-RTC-false-HAL-true,13-MX_SPI2_Init-SPI2-false-HAL-true,14-MX_SPI4_Init-SPI4-false-HAL-true,15-MX_TIM8_Init-TIM8-false-HAL-true,16-MX_TIM14_Init-TIM14-false-HAL-true,17-MX_USART6_UART_Init-USART6-false-HAL-true
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
 RCC.APB1Freq_Value=36000000
@@ -222,37 +292,53 @@ RCC.VCOI2SInputFreq_Value=1500000
 RCC.VCOI2SOutputFreq_Value=288000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=144000000
+SDIO.HardwareFlowControl=SDIO_HARDWARE_FLOW_CONTROL_DISABLE
+SDIO.IPParameters=HardwareFlowControl
+SH.GPXTI0.0=GPIO_EXTI0
+SH.GPXTI0.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
-SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
-SH.S_TIM1_CH1.ConfNb=1
+SH.GPXTI2.0=GPIO_EXTI2
+SH.GPXTI2.ConfNb=1
 SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
 SH.S_TIM2_CH1_ETR.ConfNb=1
-SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
-SH.S_TIM3_CH1.ConfNb=1
-SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
-SH.S_TIM3_CH2.ConfNb=1
-SPI1.CalculateBaudRate=36.0 MBits/s
-SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,VirtualNSS,CalculateBaudRate
-SPI1.Mode=SPI_MODE_MASTER
-SPI1.VirtualNSS=VM_NSSHARD
-SPI1.VirtualType=VM_MASTER
-TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM1.IPParameters=Channel-PWM Generation1 CH1
+SH.S_TIM3_CH3.0=TIM3_CH3,PWM Generation3 CH3
+SH.S_TIM3_CH3.ConfNb=1
+SH.S_TIM3_CH4.0=TIM3_CH4,PWM Generation4 CH4
+SH.S_TIM3_CH4.ConfNb=1
+SH.S_TIM8_CH3.0=TIM8_CH3,PWM Generation3 CH3
+SH.S_TIM8_CH3.ConfNb=1
+SPI2.CalculateBaudRate=18.0 MBits/s
+SPI2.Direction=SPI_DIRECTION_2LINES
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI2.Mode=SPI_MODE_MASTER
+SPI2.VirtualType=VM_MASTER
+SPI4.CalculateBaudRate=36.0 MBits/s
+SPI4.Direction=SPI_DIRECTION_2LINES
+SPI4.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI4.Mode=SPI_MODE_MASTER
+SPI4.VirtualType=VM_MASTER
+TIM14.Channel=TIM_CHANNEL_1
+TIM14.IPParameters=Channel
 TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM2.IPParameters=Channel-PWM Generation1 CH1
-TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2
+TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM3.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM3.IPParameters=Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4
+TIM8.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM8.IPParameters=Channel-PWM Generation3 CH3
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
-USART3.IPParameters=VirtualMode
-USART3.VirtualMode=VM_ASYNC
+USART6.IPParameters=VirtualMode
+USART6.VirtualMode=VM_ASYNC
 USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
+VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
+VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM14_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM14_VS_ClockSourceINT.Signal=TIM14_VS_ClockSourceINT
 board=custom
